<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioListener</string>
    
    <string name="pref_category_sms">Category SMS</string>
    <string name="title_sms_preference">Title SMS</string>
    <string name="summary_sms_preference">Summary SMS</string>
    <string name="dialog_sms_preference">Dialog SMS</string>
    <string name="pref_category_mic_bt">Category Mic BT</string>
    <string name="title_mic_bt_preference">Title Mic BT</string>
    <string name="summary_mic_bt_preference">Summary mic BT</string>
    
    <string name="info_name">Vous avez reçu un message de %s. Voulez vous que je lise ce message ?</string>

</resources>
